--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,21 +1,22 @@
+<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 <h1 mat-dialog-title>Add User</h1>
 <div mat-dialog-content>
     <div>
         <mat-form-field class="mr-16" appearance="outline">
             <mat-label>First name</mat-label>
-            <input [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
+            <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
             <!-- <mat-hint>Please enter a name</mat-hint> -->
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Last name</mat-label>
-            <input [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
+            <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
             <!-- <mat-hint>Please enter a name</mat-hint> -->
         </mat-form-field>
     </div>
     <div>
         <mat-form-field class="mr-16" appearance="outline" class="full-width">
             <mat-label>Birth Date</mat-label>
-            <input  [(ngModel)]="birthDate" matInput [matDatepicker]="datepicker">
+            <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="datepicker">
             <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
             <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
             <mat-datepicker #datepicker>
@@ -28,26 +29,26 @@
     </div>
 
     <div>
-        <mat-form-field class="mr-16" appearance="outline"  class="full-width">
+        <mat-form-field class="mr-16" appearance="outline" class="full-width">
             <mat-label>Street + House No.</mat-label>
-            <input  [(ngModel)]="user.street" matInput placeholder="Placeholder">
+            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Placeholder">
             <!-- <mat-hint>Please enter a address</mat-hint> -->
         </mat-form-field>
     </div>
     <div>
         <mat-form-field class="mr-16" appearance="outline">
             <mat-label>Zip code</mat-label>
-            <input  [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
+            <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
             <!-- <mat-hint>Please enter a address</mat-hint> -->
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>City</mat-label>
-            <input  [(ngModel)]="user.city" matInput placeholder="Placeholder">
+            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="Placeholder">
             <!-- <mat-hint>Please enter a address</mat-hint> -->
         </mat-form-field>
     </div>
 </div>
 <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">No Thanks</button>
-    <button mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
+    <button [disabled]="loading"  mat-button (click)="onNoClick()">No Thanks</button>
+    <button [disabled]="loading"  mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </div>
