--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,6 +18,15 @@ cursor: pointer;
     min-height: 56px;
     display: flex;
     align-items: center;
+
+    img{
+        object-fit: contain;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 48px;
+    }
 }
 
 mat-toolbar, mat-toolbar-row {
@@ -52,5 +61,7 @@ mat-toolbar, mat-toolbar-row {
 
 .router-container{
     padding-left: 56px;
+    padding-right: 56px;
     padding-top: 16px;
 }
+
