--- a/src/app/edit-user-detail-dialog/edit-user-detail-dialog.component.html
+++ b/src/app/edit-user-detail-dialog/edit-user-detail-dialog.component.html
@@ -1,8 +1,8 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-<h1 mat-dialog-title>Add User</h1>
+<h1 mat-dialog-title>Edit User Details</h1>
 <div mat-dialog-content>
     <div>
-        <mat-form-field class="mr-16" appearance="outline">
+        <mat-form-field class="mr-16 mt-8" appearance="outline">
             <mat-label>First name</mat-label>
             <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
             <!-- <mat-hint>Please enter a name</mat-hint> -->
@@ -11,6 +11,13 @@
             <mat-label>Last name</mat-label>
             <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
             <!-- <mat-hint>Please enter a name</mat-hint> -->
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field class="mr-16" appearance="outline" class="full-width">
+            <mat-label>E-Mail</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.eMail" matInput placeholder="Placeholder">
+            <!-- <mat-hint>Please enter a address</mat-hint> -->
         </mat-form-field>
     </div>
     <div>
@@ -25,32 +32,6 @@
                     <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
                 </mat-datepicker-actions>
             </mat-datepicker>
-        </mat-form-field>
-    </div>
-    <div>
-        <mat-form-field class="mr-16" appearance="outline" class="full-width">
-            <mat-label>E-Mail</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.eMail" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a address</mat-hint> -->
-        </mat-form-field>
-    </div>
-    <div>
-        <mat-form-field class="mr-16" appearance="outline" class="full-width">
-            <mat-label>Street + House No.</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a address</mat-hint> -->
-        </mat-form-field>
-    </div>
-    <div>
-        <mat-form-field class="mr-16" appearance="outline">
-            <mat-label>Zip code</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a address</mat-hint> -->
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>City</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a address</mat-hint> -->
         </mat-form-field>
     </div>
 </div>
