--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,24 @@
 <button (click)="openDialog()"  clmatTooltip="Add user" class="add-user-btn" mat-fab color="primary" matTooltipPosition="above">
     <mat-icon>add</mat-icon>
   </button>
+  <mat-card>
+
+        <mat-card-content>
+            <table class ="user-table">
+                <tr>
+                    <th>Vorname</th>
+                    <th>Nachname</th>
+                    <th>City</th>
+                    <th>E-Mail</th>
+                </tr>
+                <tr *ngFor="let user of allUsers" [routerLink]="['/user/' + user.userID]">
+                    <td>{{ user.firstName }}</td>
+                    <td>{{ user.lastName }}</td>
+                    <td>{{ user.city }}</td>
+                    <td>{{ user.eMail }}</td>
+                </tr>
+
+            </table>
+        </mat-card-content>
+
+  </mat-card>
