--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,6 +1,60 @@
-.add-user-btn{
+mat-card-content{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+
+.add-user-btn {
     position: absolute;
     right: 56px;
     bottom: 56px;
+
+}
+
+.user-table {
+    width: 100%;
+    border-collapse: collapse;
+
+    tr {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.04);
+        cursor: pointer;
+        &:last-child{
+            border-bottom: 0;
+
+
+        }
+
+        &:first-child{
+            cursor: unset;
+            &:hover{
+                background-color: unset;
+            }
+        }
+
+        &:hover{
+            background-color: rgba(0, 0, 0, 0.04);
+        }
+    }
+
+    
+
+    td{
+        height: 3rem;
+
+        &:first-child{
+            padding-left: 16px;
+        }
+    }
+
+    th {
+        text-align: start;
+        color: rgba(0, 0, 0, 0.4);
+        font-size: 14px;
+        font-weight: 500;
+
+        &:first-child{
+            padding-left: 16px;
+        }
+    }
 
 }
