--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mr-16{
     margin-right: 16px;
 }
+
+.mt-8{
+    margin-top: 8px;
+}
+
+.mt-32{
+    margin-top: 32px;
+}
 .full-width{
     width: 100%;
 }
